--- a/style.css
+++ b/style.css
@@ -637,7 +637,8 @@ body {
   .footer-container-1 {
     gap: 0.7rem;
   }
-  .unordered-lists,.footer-container {
+  .unordered-lists,
+  .footer-container {
     gap: 0.5rem;
   }
   .Location-text {
